--- a/assets/01-html/02-blockInline/05-element_nesting.html
+++ b/assets/01-html/02-blockInline/05-element_nesting.html
@@ -24,6 +24,13 @@
 				<li>&lt;/p&gt;</li>
 			</ul>
 		</div>
+		<div class="uk_gist_code_box indent mt_m">
+				<textarea readonly="readonly">
+					<p>
+						블록요소(단락) 안에 <strong>인라인 요소(강조)</strong> 가 중첩되어 있습니다.
+					</p>
+				</textarea>
+		</div>
 	</section>
 
 	<blockquote class="uk_note mt_l" role="note">
@@ -55,5 +62,15 @@
 				<li class="indent">&lt;p&gt;블록요소(단락) 안에 &lt;strong&gt;인라인 요소(강조)&lt;/strong&gt; 가 중첩되어 있습니다.<i class="t_red">&lt;/p&gt;</i></li>
 				<li><i class="t_red">&lt;/span&gt;</i></li>
 			</ul>
+		</div>
+		<div class="uk_gist_code_box indent mt_m">
+				<textarea readonly="readonly">
+					<p>
+						블록요소(단락) 안에 <strong>인라인 요소(강조)</p> 가 중첩되어 있습니다.
+					</span>
+					<span>
+						<p>블록요소(단락) 안에 <strong>인라인 요소(강조)</strong> 가 중첩되어 있습니다.</p>
+					</span>
+				</textarea>
 		</div>
 	</section>
