--- a/assets/guide.html
+++ b/assets/guide.html
@@ -198,6 +198,28 @@
 			</ul>
 		</div>
 		<!-- 간단 코드 박스(라인 넘버) -->
+
+		<!-- 실제 gist 코드 임베디드 적용 -->
+		<div class="gist_code" data-url="https://gist.github.com/uxkm/7eb8c1860f230c5628c3742bfb33494f.js">
+			<div class="gist_code_wrap"></div>
+		</div>
+
+		<!-- uk gist code -->
+		<!-- 설명줄이 필요할 때 문장 앞에 '//ex_line' 추가 (한줄만 가능) -->
+		<div class="uk_gist_code_box mt_ms" data-tit="타이틀명">
+				<textarea readonly="readonly">
+					<div draggable="true">
+						The element to drag.
+					</div>
+				</textarea>
+		</div>
+		<div class="uk_gist_code_box mt_ms" data-long-tit="아주 긴 타이틀명">
+				<textarea readonly="readonly">
+					<div draggable="true">
+						The element to drag.
+					</div>
+				</textarea>
+		</div>
 	</div>
 </div><!-- //wrap -->
 
