--- a/assets/01-html/02-blockInline/06-only_empty.html
+++ b/assets/01-html/02-blockInline/06-only_empty.html
@@ -11,19 +11,11 @@
 			이런 요소들은 내용을 갖지 않습니다, 이러한 요소를 빈 요소(empty elements)라고 합니다.<br>
 			대표적으로 <code>&lt;meta&gt;</code>, <code>&lt;link&gt;</code>, <code>&lt;img&gt;</code>, <code>&lt;hr&gt;</code>, <code>&lt;br&gt;</code> 요소가 있습니다.
 		</p>
-	</section>
-
-	<section class="view_editor ex_code mt_l" data-target="html/02-blockInline/2.6.only_empty.html">
-		<!--
-		<div  class="uk_editor" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
-			<div class="code_wrap"><textarea></textarea></div>
-		</div>
-		-->
-		<div class="line_code_box line_code_number">
-			<ul>
-				<li>&lt;img src=&quot;sample.png&quot; alt=&quot;샘플 이미지&quot; /&gt;</li>
-				<li>&lt;img src=&quot;sample.png&quot; alt=&quot;샘플 이미지&quot;&gt;</li>
-			</ul>
+		<div class="uk_gist_code_box mt_m" data-tit="empty elements">
+				<textarea readonly="readonly">
+					<img src="sample.png" alt="샘플 이미지" />
+					<img src="sample.png" alt="샘플 이미지">
+				</textarea>
 		</div>
 	</section>
 
