--- a/assets/01-html/03-sections/01-header_element.html
+++ b/assets/01-html/03-sections/01-header_element.html
@@ -16,36 +16,78 @@
 	<section class="view_editor ex_code mt_l">
 		<h2 class="ve_tit">예제</h2>
 
-		<!--
-		<div class="view_editor ex_code" data-target="html/03-sections/3.1.header_element1.html">
-			<div  class="uk_editor" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
-				<div class="code_wrap"><textarea></textarea></div>
-			</div>
-		</div>
-		-->
-		<div class="line_code_box line_code_number indent mt_ms">
-			<ul>
-				<li>&lt;header&gt;</li>
-				<li class="indent">&lt;h1&gt;UXKM&lt;/h1&gt;</li>
-				<li class="indent">&lt;p&gt;Welcome to...&lt;/p&gt;</li>
-				<li>&lt;/header&gt;</li>
-			</ul>
+		<div class="uk_gist_code_box indent mt_ms" data-tit="header element">
+			<textarea readonly="readonly">
+				<header>
+					<h1>UXKM</h1>
+					<p>Welcome to...</p>
+				</header>
+			</textarea>
 		</div>
 
-		<div class="view_editor ex_code indent mt_ms" data-target="html/03-sections/3.1.header_element2.html">
-			<div  class="uk_editor" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
-				<div class="code_wrap"><textarea></textarea></div>
-			</div>
+		<div class="uk_gist_code_box indent mt_ms" data-tit="header element">
+			<textarea readonly="readonly">
+				<header>
+					<h1>Scalable Vector Graphics (SVG) 1.2</h1>
+					<p>W3C Working Draft 27 October 2004</p>
+					<dl>
+						<dt>This version:</dt>
+						<dd><a href="https://www.w3.org/TR/2004/WD-SVG12-20041027/">https://www.w3.org/TR/2004/WD-SVG12-20041027/</a></dd>
+						<dt>Previous version:</dt>
+						<dd><a href="https://www.w3.org/TR/2004/WD-SVG12-20040510/">https://www.w3.org/TR/2004/WD-SVG12-20040510/</a></dd>
+						<dt>Latest version of SVG 1.2:</dt>
+						<dd><a href="https://www.w3.org/TR/SVG12/">https://www.w3.org/TR/SVG12/</a></dd>
+						<dt>Latest SVG Recommendation:</dt>
+						<dd><a href="https://www.w3.org/TR/SVG/">https://www.w3.org/TR/SVG/</a></dd>
+						<dt>Editor:</dt>
+						<dd>Dean Jackson, W3C, <a href="mailto:dean@w3.org">dean@w3.org</a></dd>
+						<dt>Authors:</dt>
+						<dd>See <a href="#authors">Author List</a></dd>
+					</dl>
+					<p class="copyright"><a href="https://www.w3.org/Consortium/Legal/ipr-notic ..." /></p>
+				</header>
+			</textarea>
 		</div>
-		<div class="view_editor ex_code indent mt_ms" data-target="html/03-sections/3.1.header_element3.html">
-			<div  class="uk_editor" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
-				<div class="code_wrap"><textarea></textarea></div>
-			</div>
+
+		<div class="uk_gist_code_box indent mt_ms" data-tit="header element">
+			<textarea readonly="readonly">
+				<body>
+				<header>
+					<h1>Little Green Guys With Guns</h1>
+					<nav>
+						<ul>
+							<li><a href="/games">Games</a>
+							<li><a href="/forum">Forum</a>
+							<li><a href="/download">Download</a>
+						</ul>
+					</nav>
+					<h2>Important News</h2> <!-- this starts a second subsection -->
+					<!-- this is part of the subsection entitled "Important News" -->
+					<p>To play today’s games you will need to update your client.</p>
+					<h2>Games</h2> <!-- this starts a third subsection -->
+				</header>
+				<p>You have three active games:</p>
+				<!-- this is still part of the subsection entitled "Games" -->
+				...
+			</textarea>
 		</div>
-		<div class="view_editor ex_code indent mt_ms" data-target="html/03-sections/3.1.header_element4.html">
-			<div  class="uk_editor" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
-				<div class="code_wrap"><textarea></textarea></div>
-			</div>
+
+		<div class="uk_gist_code_box indent mt_ms" data-tit="header element">
+			<textarea readonly="readonly">
+				<article>
+					<header>
+						<h1>Flexbox: The definitive guide</h1>
+						<aside>
+							<header>
+								<h2>About the author: Wes McSilly</h2>
+								<p><a href="#">Contact him! (Why would you?)</a></p>
+							</header>
+							<p>Expert in nothing but Flexbox. Talented circus sideshow.</p>
+						</aside>
+					</header>
+					<p><ins>The guide about Flexbox was supposed to be here, but it turned out Wes wasn’t a Flexbox expert either.</ins></p>
+				</article>
+			</textarea>
 		</div>
 	</section>
 
