--- a/assets/01-html/03-sections/03-section_element.html
+++ b/assets/01-html/03-sections/03-section_element.html
@@ -17,37 +17,46 @@
 
 	<section class="view_editor ex_code mt_l">
 		<h2 class="ve_tit">기본 문법</h2>
-		<!--
-		<div class="view_editor ex_code indent" data-target="html/03-sections/3.3.section_element1.html">
-			<div  class="uk_editor" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
-				<div class="code_wrap"><textarea></textarea></div>
-			</div>
+
+		<div class="uk_gist_code_box indent mt_ms" data-tit="section element">
+			<textarea readonly="readonly">
+				<section>
+					<h1>Introduction</h1>
+					<p>People have been catching fish for food since before recorded history…</p>
+				</section>
+
+				<section>
+					<h1>Equipment</h1>
+					<p>The first thing you’ll need is a fishing rod or pole that you find comfortable and is strong enough for the kind of fish you’re expecting to land…</p>
+				</section>
+			</textarea>
 		</div>
-		-->
-		<div class="line_code_box line_code_number indent mt_ms">
-			<ul>
-				<li>&lt;section&gt;</li>
-				<li class="indent">&lt;h1&gt;Introduction&lt;/h1&gt;</li>
-				<li class="indent">&lt;p&gt;People have been catching fish for food since before recorded history…&lt;/p&gt;</li>
-				<li>&lt;/section&gt;</li>
-				<li></li>
-				<li>&lt;section&gt;</li>
-				<li class="indent">&lt;h1&gt;Equipment&lt;/h1&gt;</li>
-				<li class="indent">&lt;p&gt;The first thing you’ll need is a fishing rod or pole that you find comfortable and is strong enough for the kind of fish you’re expecting to land…&lt;/p&gt;</li>
-				<li>&lt;/section&gt;</li>
-			</ul>
-		</div>
-		<div class="view_editor ex_code indent mt_s" data-target="html/03-sections/3.3.section_element2.html">
-			<div  class="uk_editor" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
-				<div class="code_wrap"><textarea></textarea></div>
-			</div>
+
+		<div class="uk_gist_code_box indent mt_ms" data-tit="section element">
+			<textarea readonly="readonly">
+				<article>
+					<header>
+						<h2>Apples</h2>
+						<p>Tasty, delicious fruit!</p>
+					</header>
+					<p>The apple is the pomaceous fruit of the apple tree.</p>
+					<section aria-label="Red apples.">
+						<h3>Red Delicious</h3>
+						<p>These bright red apples are the most common found in many supermarkets.</p>
+					</section>
+					<section aria-label="Green apples.">
+						<h3>Granny Smith</h3>
+						<p>These juicy, green apples make a great filling for apple pies.</p>
+					</section>
+				</article>
+			</textarea>
 		</div>
 	</section>
 
 
 	<section class="view_editor edit_code mt_l" data-target="html/03-sections/3.3.section_element3.html">
 		<h2 class="ve_tit">예제</h2>
-		<div class="uk_editor indent" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
+		<div class="uk_editor indent min-height-600" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 			<div class="code_wrap"><textarea></textarea></div>
 		</div>
 	</section>
