--- a/assets/01-html/02-blockInline/04-span_inline.html
+++ b/assets/01-html/02-blockInline/04-span_inline.html
@@ -15,7 +15,7 @@
 
 	<section class="view_editor ex_code mt_l" data-target="html/02-blockInline/2.4.span_inline.html">
 		<h2 class="ve_tit">span 구조 예시</h2>
-		<div class="uk_gist_code_box indent mt_m" data-tit="span">
+		<div class="uk_gist_code_box indent mt_m" data-tit="span elements">
 				<textarea readonly="readonly">
 					<p>
 						이렇게
