--- a/assets/01-html/03-sections/05-article_element.html
+++ b/assets/01-html/03-sections/05-article_element.html
@@ -17,42 +17,49 @@
 
 	<section class="view_editor ex_code mt_l">
 		<h2 class="ve_tit">기본 문법</h2>
-		<!--
-		<div class="view_editor ex_code" data-target="html/03-sections/3.5.article_element1.html">
-			<div  class="uk_editor" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
-				<div class="code_wrap"><textarea></textarea></div>
-			</div>
-		</div>
-		-->
-		<div class="line_code_box line_code_number indent mt_ms">
-			<ul>
-				<li>&lt;article&gt;</li>
-				<li class="indent">&lt;header&gt;</li>
-				<li class="indent_max">&lt;h2&gt;&lt;a href=&quot;https://herbert.io&quot;&gt;Short note on wearing shorts&lt;/a&gt;&lt;/h2&gt;</li>
-				<li class="indent_max">&lt;p&gt;</li>
-				<li class="indent_max_max">Posted on Wednesday, 10 February 2016 by Patrick Lauke.</li>
-				<li class="indent_max_max">&lt;a href=&quot;https://herbert.io/short-note/#comments&quot;&gt;6 comments&lt;/a&gt;</li>
-				<li class="indent_max">&lt;/p&gt;</li>
-				<li class="indent">&lt;/header&gt;</li>
-				<li class="indent">&lt;p&gt;</li>
-				<li class="indent_max">A fellow traveller posed an interesting question: Why do you wear shorts rather than</li>
-				<li class="indent_max">longs? The person was wearing culottes as the time, so I considered the question equivocal in nature,</li>
-				<li class="indent_max">but I attempted to provide an honest answer despite the dubiousness of the questioner’s dress.</li>
-				<li class="indent">&lt;/p&gt;</li>
-				<li class="indent">&lt;p&gt;</li>
-				<li class="indent_max">The short answer is that I enjoy wearing shorts, the long answer is...</li>
-				<li class="indent">&lt;/p&gt;</li>
-				<li class="indent">&lt;p&gt;</li>
-				<li class="indent_max">&lt;a href=&quot;https://herbert.io/short-note/&quot;&gt;Continue reading: Short note on wearing shorts&lt;/a&gt;</li>
-				<li class="indent">&lt;/p&gt;</li>
-				<li>&lt;/article&gt;</li>
-			</ul>
+		<div class="uk_gist_code_box indent mt_ms" data-tit="article element">
+				<textarea readonly="readonly">
+					<article>
+						<header>
+							<h2><a href="https://herbert.io">Short note on wearing shorts</a></h2>
+							<p>
+								Posted on Wednesday, 10 February 2016 by Patrick Lauke.
+								<a href="https://herbert.io/short-note/#comments">6 comments</a>
+							</p>
+						</header>
+						<p>
+							A fellow traveller posed an interesting question: Why do you wear shorts rather than
+							longs? The person was wearing culottes as the time, so I considered the question equivocal in nature,
+							but I attempted to provide an honest answer despite the dubiousness of the questioner’s dress.
+						</p>
+						<p>
+							The short answer is that I enjoy wearing shorts, the long answer is...
+						</p>
+						<p>
+							<a href="https://herbert.io/short-note/">Continue reading: Short note on wearing shorts</a>
+						</p>
+					</article>
+				</textarea>
 		</div>
 
-		<div class="view_editor ex_code indent mt_s" data-target="html/03-sections/3.5.article_element2.html">
-			<div  class="uk_editor" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
-				<div class="code_wrap"><textarea></textarea></div>
-			</div>
+		<div class="uk_gist_code_box indent mt_ms" data-tit="article element">
+				<textarea readonly="readonly">
+					<article>
+						<h1>Weather forecast for Seattle</h1>
+						<article class="day-forecast">
+							<h2>03 March 2018</h2>
+							<p>Rain.</p>
+						</article>
+						<article class="day-forecast">
+							<h2>04 March 2018</h2>
+							<p>Periods of rain.</p>
+						</article>
+						<article class="day-forecast">
+							<h2>05 March 2018</h2>
+							<p>Heavy rain.</p>
+						</article>
+					</article>
+				</textarea>
 		</div>
 	</section>
 
