--- a/assets/01-html/03-sections/07-aside_element.html
+++ b/assets/01-html/03-sections/07-aside_element.html
@@ -14,26 +14,25 @@
 
 	<section class="view_editor ex_code mt_l" data-target="html/03-sections/3.7.aside_element1.html">
 		<h2 class="ve_tit">기본 문법</h2>
-		<!--
-		<div  class="uk_editor indent" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
-			<div class="code_wrap"><textarea></textarea></div>
-		</div>
-		-->
-		<div class="line_code_box line_code_number indent mt_ms">
-			<ul>
-				<li>&lt;article&gt;</li>
-				<li class="indent">&lt;p&gt;</li>
-				<li class="indent_max">The Disney movie &lt;em&gt;The Little Mermaid&lt;/em&gt; was</li>
-				<li class="indent_max">first released to theatres in 1989.</li>
-				<li class="indent">&lt;/p&gt;</li>
-				<li class="indent">&lt;aside&gt;</li>
-				<li class="indent_max">The movie earned $87 million during its initial release.</li>
-				<li class="indent">&lt;/aside&gt;</li>
-				<li class="indent">&lt;p&gt;</li>
-				<li class="indent_max">More info about the movie...</li>
-				<li class="indent">&lt;/p&gt;</li>
-				<li>&lt;/article&gt;</li>
-			</ul>
+		<div class="uk_gist_code_box indent mt_ms" data-tit="aside element">
+			<textarea readonly="readonly">
+				<section>
+					<div>
+						The Disney movie <em>The Little Mermaid</em> was
+						first released to theatres in 1989.
+					</div>
+					<p>
+						The Disney movie <em>The Little Mermaid</em> was
+						first released to theatres in 1989.
+					</p>
+					<aside>
+						The movie earned $87 million during its initial release.
+					</aside>
+					<p>
+						More info about the movie...
+					</p>
+				</section>
+			</textarea>
 		</div>
 	</section>
 
